--- a/expense-api/package.json
+++ b/expense-api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exercise",
+  "name": "expense-api",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -11,18 +11,20 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "description": "",
   "devDependencies": {
     "@types/cors": "^2.8.17",
-    "@types/node": "^22.9.0",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.9.1",
+    "@types/pg": "^8.11.10",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3"
   },
   "dependencies": {
-    "@types/express": "^5.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
-    "undici-types": "^6.19.8"
-  },
-  "description": ""
+    "pg": "^8.13.1"
+  }
 }
